#da32e8a37[DONE] Modify prices for ordered products